--- a/Week_1/Day_3/Practice/GitHub Blocks/GitHub Blocks.html
+++ b/Week_1/Day_3/Practice/GitHub Blocks/GitHub Blocks.html
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row2">
             <div class="block">
                 <img src="img/nyantocat.gif" alt="Image 4">
             </div>
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row3">
             <div class="block">
                 <img src="img/linktocat.jpg" alt="Image 6">
             </div>
