--- a/Week_1/Day_4/Core/Profile Page/Profile Page.html
+++ b/Week_1/Day_4/Core/Profile Page/Profile Page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="navbar">
+    <header class="navbar"> 
         <h1>Profile</h1>
         <nav>
             <ul>
@@ -15,26 +15,24 @@
                 <li><a href="#">My Profile</a></li>
                 <li><a href="#">Find Connections</a></li>
             </ul>
+               
         </nav>
         <button class="signout-btn">Sign Out</button>
     </header>
 
     <div class="container">
-        <!-- Left Section (Profile Info) -->
         <div class="left-section">
             <div class="profile-card">
-                <!-- Avatar image -->
                 <img src="images/todd-s.jpg" alt="Profile Image" class="avatar">
                 <h2>Jane Doe</h2>
                 <p class="location">Seattle</p>
                 <p class="description">Developer | Engineer | Problem Solver<br>
-                   Master of shadows and the Internet!</p>
-                <a href="#" class="edit-link">edit profile</a>
+                   Master of shadows and the Internet!</p>              
             </div>
             <div class="education">
                 <h3>Education</h3>
                 <div class="education-item">
-                    <h4>Coding Dojo - Full Stack Bootcamp</h4>
+                    <p>Coding Dojo - Full Stack Bootcamp</p>
                     <p>Dec 2019 - Mar 2020</p>
                     <p>Triple black belt in Python, MERN, and C#...</p>
                 </div>
@@ -46,19 +44,19 @@
             <div class="connection-requests">
                 <h4>2 Connection Requests</h4>
                 <div class="request">
-                    <p>Todd E</p>
+                    <p><img src="images/todd-s.jpg" alt="">  Todd E</p>
                     <button><img src="icons/accept-circle.png" alt=""class="b"></button>
                     <button><img src="icons/close-circle.png" alt="" class="b"></button>
                 </div>
                 <div class="request">
-                    <p>Phil K</p>
+                    <p><img src="images/phil-s.jpg" alt=""> Phil K</p>
                     <button><img src="icons/accept-circle.png" alt="" class="b"></button>
                     <button><img src="icons/close-circle.png" alt=""class="b"></button>
                 </div>
             </div>
 
             <div class="user-connections">
-                <h4>Your Connections (500+)</h4>
+                <h4>Your Connections</h4>
                 <ul>
                     <li><img src="images/adrien-s.jpg" alt=""class="bb"> Adrien D</li>
                     <li><img src="images/alayne-s.jpg" alt=""class="bb">Anne J</li>
