--- a/Week_2/Day_2/Practice/Making Connections/index.html
+++ b/Week_2/Day_2/Practice/Making Connections/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 
-    <!-- navbar -->
     <div class="nav">
         <div class="flex-container">
             <h1 class="nav-title">Profile</h1>
@@ -35,11 +34,11 @@
                     <img src="images/jane-m.jpg" alt="jane" class="avatar-m">
                 </div>
                 <div class="card-body">
-                    <h1>Jane Doe</h1>
+                    <h1 id="changing">Jane Doe</h1>
                     <h3><img src="icons/map-marker.png" alt="pin" class="icon-s"> Seattle</h3>
                     <p>Developer | Engineer | Problem Solver<br>
                     Master of shadows and the Internet!</p>
-                    <p><a href="#"><img src="icons/gear.png" alt="gear" class="icon-s" onclick="editprofile(this)"> edit profile</a></p>
+                    <p><a href="#" onclick="change('#changing')"><img src="icons/gear.png" alt="gear" class="icon-s" > edit profile</a></p>
                 </div>
             </div>
 
@@ -68,21 +67,21 @@
                 </div>
                 <ul class="card-list">
                     <li class="card-list-item">
-                        <span>
+                        <span id="delete">
                             <img src="images/todd-s.jpg" alt="todd" class="avatar-s">
                             Todd E
                         </span>
-                        <span>
-                            <img src="icons/accept-circle.png" alt="accept" class="icon">
-                            <img src="icons/close-circle.png" alt="close" class="icon">
+                        <span onclick="deleteThis('#delete')" >
+                            <img src="icons/accept-circle.png" alt="accept" class="icon" onclick="deleteThis('#delete')">
+                            <img src="icons/close-circle.png" alt="close" class="icon" onclick="deleteThis('#delete')">
                         </span>
                     </li>
                     <li class="card-list-item">
-                        <span>
+                        <span id="willDelete">
                             <img src="images/phil-s.jpg" alt="phil" class="avatar-s">
                             Phil E
                         </span>
-                        <span>
+                        <span onclick="deleteThis('#willDelete')">
                             <img src="icons/accept-circle.png" alt="accept" class="icon">
                             <img src="icons/close-circle.png" alt="close" class="icon">
                         </span>
@@ -115,12 +114,13 @@
                     </li>
                 </ul>
                 <div class="card-footer">
-                    <a href="#">View More</a>
+                    <a href="#" onclick="increase('.badge')">View More</a>
                 </div>
             </div>
 
         </div>
     </div>
+
 
     <script src="script.js"></script>
 </body>
